--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Fabian Cook <hello@fabiancook.dev>",
   "license": "MIT",
   "dependencies": {
+    "@virtualstate/promise": "^1.0.1-alpha.11",
     "abort-controller": "^3.0.0",
     "uuid": "^8.3.2",
     "whatwg-url": "^9.1.0"
