--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "Fabian Cook <hello@fabiancook.dev>",
   "license": "MIT",
   "dependencies": {
-    "@virtualstate/focus": "^1.0.1-alpha.48",
+    "@virtualstate/focus": "^1.0.1-alpha.85",
     "@virtualstate/promise": "^1.0.1-alpha.11",
     "abort-controller": "^3.0.0",
     "uuid": "^8.3.2",
@@ -71,9 +71,10 @@
   "scripts": {
     "build": "rm -rf esnext && tsc",
     "postbuild": "mkdir -p coverage && node scripts/post-build.js",
-    "generate": "yarn build && node esnext/generate.js",
+    "generate": "yarn build && yarn test:generate",
+    "test:generate": "node esnext/tests/resources/generate.js",
     "prepublishOnly": "npm run build",
-    "test": "yarn build && node --enable-source-maps esnext/tests/index.js",
+    "test": "yarn build && yarn test:generate && node --enable-source-maps esnext/tests/index.js",
     "test:deno": "yarn build && deno run --allow-read --allow-net --import-map=import-map-deno.json esnext/tests/index.js",
     "test:deno:r": "yarn build && deno run -r --allow-read --allow-net --import-map=import-map-deno.json esnext/tests/index.js",
     "test:inspect": "yarn build && node --enable-source-maps --inspect-brk esnext/tests/index.js",
