--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "author": "Fabian Cook <hello@fabiancook.dev>",
   "license": "MIT",
   "dependencies": {
-    "@virtualstate/focus": "^1.0.1-alpha.89",
-    "@virtualstate/promise": "^1.0.1-alpha.11",
+    "@virtualstate/focus": "^1.0.1-alpha.127",
+    "@virtualstate/promise": "^1.1.5-alpha.82",
     "abort-controller": "^3.0.0",
+    "chevrotain": "^10.1.2",
     "uuid": "^8.3.2",
     "whatwg-url": "^9.1.0"
   },
@@ -64,7 +65,7 @@
     "rollup-plugin-ignore": "^1.0.10",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
+    "typescript": "^4.7.4",
     "urlpattern-polyfill": "^1.0.0-rc2",
     "v8-to-istanbul": "^8.1.0"
   },
