--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "author": "Fabian Cook <hello@fabiancook.dev>",
   "license": "MIT",
   "dependencies": {
-    "@virtualstate/focus": "^1.0.1-alpha.127",
-    "@virtualstate/promise": "^1.1.5-alpha.84",
+    "@virtualstate/focus": "^1.0.1",
+    "@virtualstate/promise": "^1.1.5",
     "abort-controller": "^3.0.0",
     "chevrotain": "^10.1.2",
     "uuid": "^8.3.2",
