--- a/.github/workflows/release-actions.yml
+++ b/.github/workflows/release-actions.yml
@@ -22,12 +22,14 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: "v1.x"
+      - uses: antongolub/action-setup-bun@v1
       - run: |
           yarn install
       - run: yarn build
       # yarn coverage === c8 + yarn test
       - run: yarn coverage
       - run: yarn test:deno
+      - run: yarn test:bun
       - name: Package Registry Publish - npm
         run: |
           git config user.name "${{ github.actor }}"
