--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -6,7 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NO_COVERAGE_BADGE_UPDATE: 1
-      FLAGS: FETCH_SERVICE_DISABLE,POST_CONFIGURE_TEST,PLAYWRIGHT,CONTINUE_ON_ERROR
     steps:
       - uses: actions/checkout@v2
         with:
@@ -18,10 +17,12 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: "v1.x"
+      - uses: antongolub/action-setup-bun@v1
       - run: |
           yarn install
-          npx playwright install-deps
+          bun install
       - run: yarn build
       # yarn coverage === c8 + yarn test
       - run: yarn coverage
       - run: yarn test:deno
+      - run: yarn test:bun
