--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "author": "Fabian Cook <hello@fabiancook.dev>",
   "license": "MIT",
   "dependencies": {
-    "@virtualstate/focus": "^1.0.1",
-    "@virtualstate/promise": "^1.1.5",
+    "@virtualstate/focus": "^1.2.0",
+    "@virtualstate/promise": "^1.2.1",
     "abort-controller": "^3.0.0",
     "chevrotain": "^10.1.2",
     "uuid": "^8.3.2",
@@ -47,6 +47,7 @@
     "@virtualstate/fringe": "^2.46.1",
     "@virtualstate/hooks": "^2.46.0",
     "@virtualstate/hooks-extended": "^2.46.0",
+    "@virtualstate/memo": "^1.7.2",
     "@virtualstate/union": "^2.46.0",
     "@virtualstate/x": "^2.46.0",
     "c8": "^7.12.0",
@@ -79,6 +80,7 @@
     "test:deno": "yarn build && deno run --allow-read --allow-net --import-map=import-map-deno.json esnext/tests/index.js",
     "test:deno:r": "yarn build && deno run -r --allow-read --allow-net --import-map=import-map-deno.json esnext/tests/index.js",
     "test:inspect": "yarn build && node --enable-source-maps --inspect-brk esnext/tests/index.js",
+    "test:bun": "yarn build && bun esnext/tests/index.js",
     "coverage": "yarn build && c8 node esnext/tests/index.js && yarn postbuild"
   }
 }
